dxr/tests/trybuild/tuple.rs
use dxr::FromDXR;

#[derive(FromDXR)]
pub struct TupleStruct(String);

fn main() {}
